Introduce function `python_code` to pretty print function sources in notebooks and apply it to *Gray codes* notebooks.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -13,6 +13,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run ../python-libs/inpututils.py\n",
+    "%run ../python-libs/graycodes.py\n",
+    "%run ../python-libs/bits.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,6 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Generate Gray codes by *ranking*\n",
+    "\n",
     "Let $r$, standing for *rank*, be a function defined inductively as follows:\n",
     "$$\n",
     "    r()=0 \\\\\n",
@@ -94,18 +109,55 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "observe that the former and latter rows stay steal, only the middle is shifted to the right. Python code that implements the writing above is pretty elegant:\n",
-    "    \n",
-    "    def gray_code(k): \n",
-    "        g = k ^ (k >> 1)\n",
-    "        return g\n",
+    "observe that the former and latter rows stay steal, only the middle is shifted to the right. \n",
     "\n",
-    "and do a quick check against the Ruskey's example:\n",
-    "\n",
-    "    >>>bin(gray_code(0b101100110))\n",
-    "    '0b111010101'\n",
-    "    \n",
-    "---\n",
+    "Python function `gray_code` that implements arguments above is pretty elegant:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def gray_code(k): \n",
+       "    \"\"\"\n",
+       "\n",
+       "    Examples\n",
+       "    ========\n",
+       "\n",
+       "    >>> bin(gray_code(0b101100110))\n",
+       "    '0b111010101'\n",
+       "\n",
+       "    \"\"\"\n",
+       "    g = k ^ (k >> 1)\n",
+       "    return g\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(gray_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Ranking* of a given code\n",
     "\n",
     "Although not required, we can work the relation $k_{i−1} = k_i \\oplus  g_{i-1}$ backwards, namely given a Gray code `g` find the corresponding position or rank `k`. To succeed, we think inductively as follows: rewrite the same schema, starting from the very left, namely the most significant part\n",
     "\n",
@@ -157,27 +209,101 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "Hence the following implementation can be written\n",
     "\n",
-    "    def gray_position(g):\n",
-    "        k=0\n",
-    "        for i in reversed(range(g.bit_length())):\n",
-    "            k ^= all_on(i+1) * is_on(g, i)\n",
-    "        return k\n",
-    "\n",
-    "where auxiliary functions are defined as follows:\n",
-    "\n",
-    "    def all_on(i): \n",
-    "        return (1 << i) - 1\n",
-    "\n",
-    "    def is_on(n, i, return_int=False): \n",
-    "        res = n & (1 << i)\n",
-    "        return res if return_int else bool(res)\n",
-    "\n",
-    "We code the repetition of each symbol $g_{i}$ building a sequence of ones of the correct length at each iteration, multiplied by a check that ensure that such symbol is actually 1. Let us check our code against the gray code in the example above:\n",
-    "\n",
-    "    >>>bin(gray_position(0b111010101))\n",
-    "    '0b101100110'\n"
+    "This argument is implemented in function `gray_position`, where we code the repetition of each symbol $g_{i}$ building a sequence of ones of the correct length at each iteration, multiplied by a check that ensure that such symbol is actually 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def gray_position(g):\n",
+       "    \"\"\"\n",
+       "\n",
+       "    Examples\n",
+       "    ========\n",
+       "\n",
+       "    >>> bin(gray_position(0b111010101))\n",
+       "    '0b101100110'\n",
+       "\n",
+       "    \"\"\"\n",
+       "    k=0\n",
+       "    for i in reversed(range(g.bit_length())):\n",
+       "        k ^= set_all(i+1) * is_on(g, i)\n",
+       "    return k\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(gray_position)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where auxiliary functions are defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def is_on(S, j, return_int=False): \n",
+       "    \"\"\"\n",
+       "    Returns `True` if the `j`-th item of the set `S` is on.\n",
+       "\n",
+       "    Examples\n",
+       "    ========\n",
+       "\n",
+       "    Check if the 3-th and then 2-nd item of the set is on:\n",
+       "    >>> S = 0b101010\n",
+       "    >>> is_on(S, 3), is_on(S, 2)\n",
+       "    (True, False)\n",
+       "\n",
+       "    \"\"\"\n",
+       "    res = bool(S & (1 << j))\n",
+       "    return int(res) if return_int else res\n",
+       "\n",
+       "def set_all(n):\n",
+       "    return (1 << n) - 1\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(is_on, set_all)"
    ]
   },
   {
