Add theoretical introduction about Gray codes and write a *direct* implementation according to Algorithm 5.3 of Ruskey volume.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Massimo Nocentini<br>May 19, 2016: BRGC</div>\n",
+    "<div align=\"right\">Massimo Nocentini\n",
+    "<br>June 7, 2016: theoretical intro\n",
+    "<br>May 19, 2016: BRGC\n",
+    "</div>\n",
     "\n",
     "<div align=\"center\">\n",
     "<b>Abstract</b><br>\n",
@@ -14,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -29,9 +32,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Reflected Gray Codes\n",
+    "# Combinatorial Generation\n",
     "\n",
-    "The theory described here is given by [Frank Ruskey][fr] and adapted from his [Combinatorial Generation][cg] book. We use the following arguments to implement some Python functions, available [here][libs:gray].\n",
+    "The theory described here is given by [Frank Ruskey][fr] and adapted from his [Combinatorial Generation][cg] book. We use the following arguments to implement some Python functions, available [here][libs:gray]. In this introduction we report some concepts and definitions from Ruskey that we believe interesting and necessary for what follows, starting with the meaning of *Combinatorial Generation*:\n",
+    "\n",
+    ">*Let's look at all the possibilities.* This phrase sums up the outlook of this book. In\n",
+    "computer science, mathematics, and in other fields it is often necessary to examine all of\n",
+    "a finite number of possibilities in order to solve a problem or gain insight into the solution\n",
+    "of a problem. These possibilities often have an underlying combinatorial structure which\n",
+    "can be exploited in order to obtain an efficient algorithm for generating some appropriate\n",
+    "representation of them.\n",
+    "\n",
+    "About *complexity*:\n",
+    "\n",
+    ">Not much attention has been paid to the model of computation in the area of combinatorial\n",
+    "generation. For the most part authors use the random access machine model. This is more\n",
+    "or less like counting operations in a Pascal program, with the understanding that integers\n",
+    "can be arbitrarily large and the assumption that standard arithmetic operations can be\n",
+    "done in constant time. For large integers this is an unrealistic assumption. It is generally\n",
+    "the case that integers are small in generation algorithms, but that they are large in ranking\n",
+    "and unranking algorithms. We will therefore measure ranking and unranking algorithms in\n",
+    "terms of the number of arithmetic operations used.\n",
+    "\n",
+    "About *analysis*:\n",
+    "\n",
+    ">There are two terms that are used throughout the book. We strive to develop algorithms\n",
+    "that have these properties. \n",
+    "   - **CAT** algorithms: the holy grail of generating combinatorial objects is to find an algorithm\n",
+    "   that runs in Constant Amortized Time. This means that the amount of computation, after\n",
+    "   a small amount of preprocessing, is proportional to the number of objects that are listed.\n",
+    "   *We do not count the time to actually output or process the objects; we are only concerned\n",
+    "   with the amount of data structure change that occurs as the objects are being generated*. \n",
+    "   Suppose that the input to our generation algorithm is n, and that this will produce $N$\n",
+    "   objects, each of \"size\" $n$. A CAT algorithm has running time $\\mathcal{O}(N)$. In the typical \n",
+    "   application of combinatorial generation, each object, as it is produced, is processed somehow.\n",
+    "   If this processing takes time $\\mathcal{O}(n)$, then having a CAT algorithm has no advantage over\n",
+    "   having one with running time $\\mathcal{O}(nN)$, since the total running time is $\\mathcal{O}(nN)$ \n",
+    "   in either case.\n",
+    "   - **BEST** algorithms: this means *Backtracking Ensuring Success at Terminals*. In other\n",
+    "   words, the algorithm is of the backtracking type, but every leaf of the backtracking tree is\n",
+    "   an object of the desired type; it is a *success*.\n",
+    "\n",
+    "*Don't count the output* principle:\n",
+    "\n",
+    ">There are are many papers about generating combinatorial objects that describe an\n",
+    "$\\mathcal{O}(nN)$ running time as *optimal*, because this is the amount of output produced by the\n",
+    "algorithm — each object has size $n$ and there are $N$ objects in total. This is a misguided\n",
+    "notion that has its roots in the way lower bounds are discussed in the traditional introduction\n",
+    "to complexity theory course. There the *trivial lower bound* says that the amount of output\n",
+    "gives a lower bound on the amount of computation — of course it says the same thing in\n",
+    "our setting, *but the amount of output is the wrong thing to measure*.\n",
+    ">>**Don't Count the Output Principle**: In combinatorial generation it is the\n",
+    "amount of data structure change that should be measured in determining the complexity \n",
+    "of an algorithm; the time required to output (and process) each object should be ignored.\n",
+    "\n",
+    ">The *trivial lower bound* for combinatorial generation is $\\mathcal{Θ}(N )$; it is independent of $n$.\n",
+    "Now back to our typical application,\n",
+    "where processing each object took time $\\mathcal{O}(n)$ even though our generation algorithm was\n",
+    "CAT. Wouldn't it be nice if the $\\mathcal{O}(nN)$ could be brought down to $\\mathcal{O}(N)$? \n",
+    "This is frequently possible! If you go back and observe how successive objects are processed, *it is often the\n",
+    "case that the amount of processing required is proportional to the amount of change that\n",
+    "successive objects undergo.*\n",
+    "\n",
+    "A last concept, *ordering*:\n",
+    "\n",
+    ">*Lexicographic* order is based on the familiar idea as the ordering of words in dictionaries.\n",
+    "The only requirement is that *the letters that make up the alphabet of the language be\n",
+    "ordered*. In the definitions below we use $\\prec$ to denote the assumed underlying ordering of\n",
+    "the symbols of the alphabet and $<$ to denote orderings of strings (and, of course, integers). \n",
+    "We remark again that in most instances the alphabet is the set of natural numbers under the usual numeric ordering\n",
+    "$0 \\prec 1 \\prec 2 \\prec \\ldots$.\n",
+    "\n",
+    "We report definitions of three orderings:\n",
+    "\n",
+    "   - *lexicographic* (or *lex*) order, denoted by $<_{l}$: \n",
+    "   $a_1 a_2 \\ldots a_n <_l b_1 b_2 \\ldots b_m$ if either\n",
+    "      1. for some $k$, $a_k \\prec b_k$ and $a_i = b_i$ for $i\\in\\lbrace 1, 2, \\ldots , k − 1\\rbrace$, or\n",
+    "      2. $n < m$ and $a_i = b_i$ for $i \\in\\lbrace 1, 2, \\ldots , n\\rbrace$.\n",
+    "   - *reverse lexicographic* (or *relex*) order, denoted by $<_{r}$: $a_1 a_2 \\ldots a_n <_r b_1 b_2 \\ldots b_m$\n",
+    "   if $b_1 b_2 \\ldots b_m <_l a_1 a_2 \\ldots a_n$ in lex order.\n",
+    "   - *co-lexicographic* (or *colex*) order, denoted by $<_{c}$: $a_1 a_2 \\ldots a_n <_c b_1 b_2 \\ldots b_m$\n",
+    "   if $a_n \\ldots a_2 a_1 <_l b_m \\ldots b_2 b_1$ in lex order.\n",
     "\n",
     "[fr]:http://webhome.cs.uvic.ca/~ruskey/\n",
     "[cg]:http://www.1stworks.com/ref/RuskeyCombGen.pdf\n",
@@ -42,7 +123,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Gray codes by *ranking*\n",
+    "# Binary Reflected Gray Codes\n",
+    "\n",
+    "Here we introduce combinatorial Gray codes, which are lists of combinatorial\n",
+    "objects in which successive objects are *close* in some sense. Quoting Ruskey:\n",
+    "\n",
+    ">Suppose that we wish to list all $2^n$ bitstrings of length $n$, in such a way that each bitstring\n",
+    "differs from its predecessor by a single bit. Such lists are called *binary Gray codes*, named\n",
+    "after Frank Gray who used them in a patent he obtained for \"pulse code communication\".\n",
+    "\n",
+    "Introducing *reflection* to have a recursive definition:\n",
+    "\n",
+    ">There is a very simple recursive algorithm for generating one particular Gray code, known\n",
+    "as the *binary reflected Gray code (BRGC)*.\n",
+    "The binary reflected Gray code on *n* elements, $\\textbf{G}_n$, is defined recursively by letting\n",
+    "$\\textbf{G}_0$ be the single element sequence containing the empty string $\\epsilon$, \n",
+    "and letting $\\textbf{G}_n$ be the list obtained by prefixing each element of $\\textbf{G}_{n−1}$ \n",
+    "with a 0 and then prefixing each element of $\\textbf{G}_{n−1}$ with a 1. For example: \n",
+    "$\\textbf{G}_1 = (0,1), \\textbf{G}_2 = (00, 01, 11, 10), \\textbf{G}_3 = (000, 001, 011, 010, 110, 111, 101, 100)$.\n",
+    "The $n$-dimensional hypercube, or $n$-cube, $Q_n$ , may be considered as the graph whose\n",
+    "vertices consist of all bitstrings of length $n$ and where two vertices are joined by an edge\n",
+    "if they differ by a single bit. The problem of finding a Gray code corresponds to finding a\n",
+    "Hamilton path in $Q_n$: observe that the binary reflected Gray\n",
+    "code actually defines a Hamiltonian cycle on the $n$-cube since the first and last bitstrings\n",
+    "only differ by a single bit.\n",
+    "\n",
+    "There is an interesting connection between the Towers of Hanoi problem, the binary\n",
+    "reflected Gray code, and ordinary counting in binary:\n",
+    "\n",
+    ">Now suppose that the disks are numbered $0, 1, \\ldots , n-1$ where 0 is the smallest disk and\n",
+    "$n-1$ is the largest disk. Let $T_n$ denote the sequence of disks that are moved in solving the\n",
+    "$n$ disk Towers of Hanoi problem. Looking at the following table, $T_3 = 0, 1, 0, 2, 0, 1, 0$. From\n",
+    "the recursive solution to the Towers of Hanoi problem we see that $T_1$ = $1$ and in general\n",
+    "$T_{n+1} = T_n , n + 1, T_n$ . As a notational convenience we will now assume that the Gray code\n",
+    "bitstrings are indexed $g_{n−1} \\ldots g_0$ . It turns out that the number at position k in T_n, zero-based, \n",
+    "is the index of the bit that changes in the bitstring of $\\textbf{G}_n$ in position $k$, \n",
+    "and that this is equal to the position\n",
+    "of the rightmost 0, counting from the right, in the bitstring at position $k$ when counting in binary.\n",
+    "The sequence $T_n$ is called the transition sequence of the BRGC. Every Hamilton path on\n",
+    "the $n$-cube has a transition sequence and these paths are often specified by their transition\n",
+    "sequences.\n",
+    "$$\n",
+    "\\begin{array}{ccc}\n",
+    "\\text{binary} & \\text{Gray code} & T_n\\\\\n",
+    "\\hline\n",
+    "000 & 000 & 0 \\\\\n",
+    "001 & 001 & 1 \\\\\n",
+    "010 & 011 & 0 \\\\\n",
+    "011 & 010 & 2 \\\\\n",
+    "100 & 110 & 0 \\\\\n",
+    "101 & 111 & 1 \\\\\n",
+    "110 & 101 & 0 \\\\\n",
+    "111 & 100 &  \\\\\n",
+    "\\end{array}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Ranking* Gray codes\n",
     "\n",
     "Let $r$, standing for *rank*, be a function defined inductively as follows:\n",
     "$$\n",
@@ -116,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +285,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +298,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *Ranking* of a given code\n",
+    "The following are Gray codes we saw in the above example, namely all of them of length 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0b000', '0b001', '0b011', '0b010', '0b110', '0b111', '0b101', '0b100']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(gray_codes(3, justified=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Unranking* Gray codes\n",
     "\n",
     "Although not required, we can work the relation $k_{i−1} = k_i \\oplus  g_{i-1}$ backwards, namely given a Gray code `g` find the corresponding position or rank `k`. To succeed, we think inductively as follows: rewrite the same schema, starting from the very left, namely the most significant part\n",
     "\n",
@@ -304,6 +474,65 @@
    ],
    "source": [
     "python_code(is_on, set_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Scratchpad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "a = lambda b: b + 1\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = lambda b: b + 1\n",
+    "python_code(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0b0', '0b1', '0b11', '0b10', '0b110', '0b111', '0b101', '0b100']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(bin, rank_gray_code_direct(3)))"
    ]
   },
   {
