Refine some experiments about parallelogram polyominoes and add capital greek symbols.

--- a/tutorials/backtrack.ipynb
+++ b/tutorials/backtrack.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 395,
    "metadata": {
     "collapsed": true
    },
@@ -2322,135 +2322,251 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "so, we are now ready to tile a board with 6 rows and 10 columns, where no cell is forbidden and only *one* piece is available for each shape: "
+    "Thoughts:\n",
+    "   - proceed by *iterative deepening*\n",
+    "   - at $C_{n}-1$ level it seems that a *hole* (one empty cell surrounded by filled ones) occurs, where $C_{n}$ is \n",
+    "   the relative Catalan number to the problem instance under study\n",
+    "   - possible pruning if a *hole* is found after piece placement\n",
+    "   - add a keyword argument to require the check about the discover of a solution: if a solution is found ensure\n",
+    "   that a predicate on the `available` array holds (for instance, that every piece has been used so that no pieces \n",
+    "   left for each solution)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 439,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "size = 2**n\n",
     "dim = (size, size)\n",
-    "polys_sols = polyominoes(dim, shapes, availables='ones', forbidden=[], max_depth_reached=-1)"
+    "polys_sols = polyominoes(dim, shapes, availables=\"ones\", forbidden=[], max_depth_reached=40)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and pretty print the first 10 solutions:"
+    "and pretty print some experiments:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 440,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(1):\n",
-    "    with timing(lambda: next(polys_sols)) as (s, start, end):\n",
-    "        t = (end - start, 'secs')\n",
-    "        t = (t[0] / 60, 'mins') if t[0] > 59 else t\n",
-    "        t = (t[0] / 60, 'hours') if t[0] > 59 else t\n",
-    "        o = \"st\" if not i else \"sn\"\n",
-    "        print(\"{}-{} solution computed in {:.3} {}:\\n{}\".format(i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"), \n",
-    "                                                                *t, pretty(s, dim, lower_greek_symbols())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n"
+      "1-st solution computed in 6.69 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ ξ ξ ξ φ Θ Θ │\n",
+      "│ α α α α χ κ κ μ σ σ ξ ξ ξ φ Θ Θ │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ξ ξ φ φ Θ │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ Π Π Π φ Θ │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ Π Π Π Π   │\n",
+      "│ β β θ ι ι λ π π π Ν υ υ υ Ι Ι   │\n",
+      "│ γ γ θ ι ι ι π π π Ν Ν Ν υ υ Ι Ι │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Ν Ν Ν Ζ Ζ   Ι │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ Ζ Ζ Ζ Ζ │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ Α Ξ Ξ   │\n",
+      "│ η ε ε ρ ν ν ς ς ς ω ω ω Α Α Ξ Ξ │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς ψ ω ω ω Α Ξ Ξ │\n",
+      "│ η ε ε ο ο ρ Κ ς ς ψ ψ Ρ Ρ Α     │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β ψ ψ Ο Ρ Ρ Ρ   │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β Β ψ Ο Η Η Η Η │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Β Β Β Ο Ο Ο Η Η │\n",
+      "└─────────────────────────────────┘\n",
+      "2-sn solution computed in 0.000266 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ ξ ξ ξ φ Θ Θ │\n",
+      "│ α α α α χ κ κ μ σ σ ξ ξ ξ φ Θ Θ │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ξ ξ φ φ Θ │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ Π Π Π φ Θ │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ Π Π Π Π   │\n",
+      "│ β β θ ι ι λ π π π Ν υ υ υ Ξ Ξ   │\n",
+      "│ γ γ θ ι ι ι π π π Ν Ν Ν υ υ Ξ Ξ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Ν Ν Ν Ζ Ζ Ξ Ξ │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ Ζ Ζ Ζ Ζ │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ Α Ι Ι   │\n",
+      "│ η ε ε ρ ν ν ς ς ς ω ω ω Α Α Ι Ι │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς ψ ω ω ω Α   Ι │\n",
+      "│ η ε ε ο ο ρ Κ ς ς ψ ψ Ρ Ρ Α     │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β ψ ψ Ο Ρ Ρ Ρ   │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β Β ψ Ο Η Η Η Η │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Β Β Β Ο Ο Ο Η Η │\n",
+      "└─────────────────────────────────┘\n",
+      "3-rd solution computed in 1.72 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Π Π Π Ξ Ξ   │\n",
+      "│ α α α α χ κ κ μ σ σ Π Π Π Π Ξ Ξ │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ψ Ρ Ρ Ξ Ξ │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ψ ψ Ρ Ρ Ρ │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ψ ψ ξ ξ ξ │\n",
+      "│ β β θ ι ι λ π π π Ο Ζ Ζ ψ ξ ξ ξ │\n",
+      "│ γ γ θ ι ι ι π π π Ο Ζ Ζ Ζ Ζ ξ ξ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Ο Ο Ο Η Η Η Η │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ Ι Ι Η Η │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ Α Ι Ι   │\n",
+      "│ η ε ε ρ ν ν ς ς ς ω ω ω Α Α Ι   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς φ ω ω ω Α Θ Θ │\n",
+      "│ η ε ε ο ο ρ Κ ς ς φ υ υ υ Α Θ Θ │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β φ φ Ν υ υ   Θ │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β Β φ Ν Ν Ν   Θ │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Β Β Β Ν Ν Ν     │\n",
+      "└─────────────────────────────────┘\n",
+      "4-th solution computed in 0.000191 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Π Π Π Ξ Ξ   │\n",
+      "│ α α α α χ κ κ μ σ σ Π Π Π Π Ξ Ξ │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ψ Ρ Ρ Ξ Ξ │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ψ ψ Ρ Ρ Ρ │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ψ ψ Λ Λ   │\n",
+      "│ β β θ ι ι λ π π π Ο Ζ Ζ ψ Λ Λ Λ │\n",
+      "│ γ γ θ ι ι ι π π π Ο Ζ Ζ Ζ Ζ Λ Λ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Ο Ο Ο Η Η Η Η │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ Ι Ι Η Η │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ Α Ι Ι   │\n",
+      "│ η ε ε ρ ν ν ς ς ς ω ω ω Α Α Ι   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς φ ω ω ω Α Θ Θ │\n",
+      "│ η ε ε ο ο ρ Κ ς ς φ υ υ υ Α Θ Θ │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β φ φ Ν υ υ   Θ │\n",
+      "│ δ δ δ ο ο ο Κ Κ Β Β φ Ν Ν Ν   Θ │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Β Β Β Ν Ν Ν     │\n",
+      "└─────────────────────────────────┘\n",
+      "5-th solution computed in 3.3 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Θ Θ ω ω ω   │\n",
+      "│ α α α α χ κ κ μ σ σ Θ Θ ψ ω ω ω │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ Θ ψ ψ φ   │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ Θ ψ ψ φ   │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ Ρ Ρ ψ φ φ │\n",
+      "│ β β θ ι ι λ π π π Β Ι Ι Ρ Ρ Ρ φ │\n",
+      "│ γ γ θ ι ι ι π π π Β Β Ι Ι ξ ξ ξ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Β Β Β Ι ξ ξ ξ │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ Λ Λ ξ ξ │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ Λ Λ Λ   │\n",
+      "│ η ε ε ρ ν ν ς ς ς Ν υ υ υ Λ Λ   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς Ν Ν Ν υ υ Α   │\n",
+      "│ η ε ε ο ο ρ Κ ς ς Ν Ν Ν Ξ Ξ Α Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Η Η Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Ζ Ζ Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Ζ Ζ Ζ Ζ Ο Ο Ο   │\n",
+      "└─────────────────────────────────┘\n",
+      "6-th solution computed in 0.056 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Λ Λ ω ω ω   │\n",
+      "│ α α α α χ κ κ μ σ σ Λ Λ Λ ω ω ω │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ Λ Λ Ι Ι   │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ξ ξ ξ Ι Ι │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ξ ξ ξ ψ Ι │\n",
+      "│ β β θ ι ι λ π π π Β Ρ Ρ ξ ξ ψ ψ │\n",
+      "│ γ γ θ ι ι ι π π π Β Β Ρ Ρ Ρ ψ ψ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Β Β Β φ Θ Θ ψ │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ φ Θ Θ   │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ φ φ Θ   │\n",
+      "│ η ε ε ρ ν ν ς ς ς Ν υ υ υ φ Θ   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς Ν Ν Ν υ υ Α   │\n",
+      "│ η ε ε ο ο ρ Κ ς ς Ν Ν Ν Ξ Ξ Α Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Η Η Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Ζ Ζ Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Ζ Ζ Ζ Ζ Ο Ο Ο   │\n",
+      "└─────────────────────────────────┘\n",
+      "7-th solution computed in 0.0655 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Π Π Π Ι Ι   │\n",
+      "│ α α α α χ κ κ μ σ σ Π Π Π Π Ι Ι │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ψ ω ω ω Ι │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ψ ψ ω ω ω │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ψ ψ ξ ξ ξ │\n",
+      "│ β β θ ι ι λ π π π Β Ρ Ρ ψ ξ ξ ξ │\n",
+      "│ γ γ θ ι ι ι π π π Β Β Ρ Ρ Ρ ξ ξ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Β Β Β φ Θ Θ   │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ φ Θ Θ   │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ φ φ Θ   │\n",
+      "│ η ε ε ρ ν ν ς ς ς Ν υ υ υ φ Θ   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς Ν Ν Ν υ υ Α   │\n",
+      "│ η ε ε ο ο ρ Κ ς ς Ν Ν Ν Ξ Ξ Α Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Η Η Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Ζ Ζ Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Ζ Ζ Ζ Ζ Ο Ο Ο   │\n",
+      "└─────────────────────────────────┘\n",
+      "8-th solution computed in 0.000138 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Π Π Π Ι Ι   │\n",
+      "│ α α α α χ κ κ μ σ σ Π Π Π Π Ι Ι │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ψ ω ω ω Ι │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ψ ψ ω ω ω │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ψ ψ ξ ξ ξ │\n",
+      "│ β β θ ι ι λ π π π Β Ρ Ρ ψ ξ ξ ξ │\n",
+      "│ γ γ θ ι ι ι π π π Β Β Ρ Ρ Ρ ξ ξ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Β Β Β φ Λ Λ   │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ φ Λ Λ Λ │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ φ φ Λ Λ │\n",
+      "│ η ε ε ρ ν ν ς ς ς Ν υ υ υ φ Α   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς Ν Ν Ν υ υ Α Α │\n",
+      "│ η ε ε ο ο ρ Κ ς ς Ν Ν Ν Ξ Ξ   Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Η Η Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Ζ Ζ Η Η Ο Ξ Ξ   │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Ζ Ζ Ζ Ζ Ο Ο Ο   │\n",
+      "└─────────────────────────────────┘\n",
+      "9-th solution computed in 3.58e-05 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Π Π Π Ι Ι   │\n",
+      "│ α α α α χ κ κ μ σ σ Π Π Π Π Ι Ι │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ψ ω ω ω Ι │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ψ ψ ω ω ω │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ψ ψ ξ ξ ξ │\n",
+      "│ β β θ ι ι λ π π π Β Ρ Ρ ψ ξ ξ ξ │\n",
+      "│ γ γ θ ι ι ι π π π Β Β Ρ Ρ Ρ ξ ξ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Β Β Β φ Λ Λ   │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ φ Λ Λ Λ │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ φ φ Λ Λ │\n",
+      "│ η ε ε ρ ν ν ς ς ς Ν υ υ υ φ Θ Θ │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς Ν Ν Ν υ υ Θ Θ │\n",
+      "│ η ε ε ο ο ρ Κ ς ς Ν Ν Ν Ξ Ξ   Θ │\n",
+      "│ δ δ δ ο ο ο Κ Κ Η Η Η Η Ο Ξ Ξ Θ │\n",
+      "│ δ δ δ ο ο ο Κ Κ Ζ Ζ Η Η Ο Ξ Ξ   │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Ζ Ζ Ζ Ζ Ο Ο Ο   │\n",
+      "└─────────────────────────────────┘\n",
+      "10-th solution computed in 0.000523 secs:\n",
+      "┌─────────────────────────────────┐\n",
+      "│ α χ χ χ χ μ μ μ σ σ Π Π Π Ι Ι   │\n",
+      "│ α α α α χ κ κ μ σ σ Π Π Π Π Ι Ι │\n",
+      "│ β ζ ζ ζ λ λ κ μ σ σ σ ψ ω ω ω Ι │\n",
+      "│ β β ζ ζ λ λ κ Δ Δ Δ Δ ψ ψ ω ω ω │\n",
+      "│ β β θ ζ λ λ κ Δ Δ Δ Δ ψ ψ Λ Λ   │\n",
+      "│ β β θ ι ι λ π π π Β Ρ Ρ ψ Λ Λ Λ │\n",
+      "│ γ γ θ ι ι ι π π π Β Β Ρ Ρ Ρ Λ Λ │\n",
+      "│ γ γ θ θ Γ ι Ε Ε π Β Β Β φ ξ ξ ξ │\n",
+      "│ η γ γ ν Γ Γ Γ Ε τ τ τ τ φ ξ ξ ξ │\n",
+      "│ η ε ε ν ν Γ Γ Ε Ε τ τ τ φ φ ξ ξ │\n",
+      "│ η ε ε ρ ν ν ς ς ς Ν υ υ υ φ Α   │\n",
+      "│ η ε ε ρ ρ ρ Κ ς ς Ν Ν Ν υ υ Α Α │\n",
+      "│ η ε ε ο ο ρ Κ ς ς Ν Ν Ν Ξ Ξ   Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Η Η Η Η Ο Ξ Ξ Α │\n",
+      "│ δ δ δ ο ο ο Κ Κ Ζ Ζ Η Η Ο Ξ Ξ   │\n",
+      "│ δ δ δ Μ Μ Μ Μ Μ Ζ Ζ Ζ Ζ Ο Ο Ο   │\n",
+      "└─────────────────────────────────┘\n"
      ]
     }
    ],
    "source": [
-    "for i in frozenset({1,2,3}):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False, True)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from operator import le\n",
-    "\n",
-    "(5,10) < (3,4), le(3,4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 10)"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min([(2, 3), (1, 10)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 3]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(filter(lambda x: x == 3, [1,3,2,3]))"
+    "for i in range(10):\n",
+    "    with timing(lambda: next(polys_sols)) as (s, start, end):\n",
+    "        t = (end - start, 'secs')\n",
+    "        t = (t[0] / 60, 'mins') if t[0] > 59 else t\n",
+    "        t = (t[0] / 60, 'hours') if t[0] > 59 else t\n",
+    "        o = \"st\" if not i else \"sn\"\n",
+    "        symbols = lower_greek_symbols() + capital_greek_symbols()\n",
+    "        print(\"{}-{} solution computed in {:.3} {}:\\n{}\".format(i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"), \n",
+    "                                                                *t, pretty(s, dim, symbols)))"
    ]
   },
   {
